controller parses multiple words on the same line